--- a/app/src/main/res/layout/head_sub_normal.xml
+++ b/app/src/main/res/layout/head_sub_normal.xml
@@ -16,21 +16,39 @@
         android:contentDescription="信息中心图标"
         android:src="@drawable/icon_secretary"/>
 
-    <TextView
-        android:id="@+id/layout_sub_head_txt"
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="14dip"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="14dip"
         android:background="@drawable/information_centre_txt_bg"
-        android:gravity="center_vertical"
-        android:minLines="1"
         android:paddingLeft="12dp"
-        android:paddingRight="12dp"
-        android:text=""
-        android:textColor="@color/title_bg"
-        android:textSize="14sp"/>
+        android:paddingRight="12dp">
+
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="5dp"
+            android:gravity="center_vertical"
+            android:minLines="1"
+            android:textColor="@color/title_bg"
+            android:textSize="14sp"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/layout_sub_head_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center_vertical"
+            android:minLines="1"
+            android:textColor="@color/title_bg"
+            android:textSize="14sp"/>
+
+    </LinearLayout>
 
 
 </LinearLayout>
