--- a/app/src/main/res/layout/layout_nodata.xml
+++ b/app/src/main/res/layout/layout_nodata.xml
@@ -22,7 +22,7 @@
         android:layout_centerInParent="true"
         android:layout_marginTop="10dp"
         android:text="暂时没有内容"
-        android:textColor="@color/app_white"
+        android:textColor="@color/text_color_gray3"
         android:textSize="14sp"/>
 
 
