信息中心没有数据图片展示替换，注册页面协议地址替换，绑定设备页面背景大小调整

--- a/app/src/main/res/layout/activity_device_bind.xml
+++ b/app/src/main/res/layout/activity_device_bind.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:id="@+id/bind_logo"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="238dp"
         android:layout_marginTop="33dp"
         android:src="@mipmap/device_bind_logo"
         android:scaleType="fitXY"
