--- a/app/src/main/res/layout/activity_loading2.xml
+++ b/app/src/main/res/layout/activity_loading2.xml
@@ -16,7 +16,7 @@
         android:layout_height="50dp"
         android:layout_below="@id/layout_title"
         android:orientation="horizontal"
-        android:visibility="gone"></LinearLayout>
+        android:visibility="gone"/>
 
     <include
         layout="@layout/layout_error"
