--- a/app/src/main/res/values-xhdpi/styles.xml
+++ b/app/src/main/res/values-xhdpi/styles.xml
@@ -502,7 +502,7 @@
     </style>
 
     <style name="report_calendar_month_txt2">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/circle_orange</item>
         <item name="android:textSize">12sp</item>
@@ -516,13 +516,13 @@
     </style>
 
     <style name="report_calendar_month_lineh">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dip</item>
         <item name="android:background">@color/white</item>
     </style>
     <!-- 我的奖品 -->
     <style name="career_reward_txt1">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray2</item>
         <item name="android:textSize">@dimen/text_size_small</item>
@@ -534,7 +534,7 @@
     </style>
 
     <style name="career_reward_txt2">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray1</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
@@ -546,7 +546,7 @@
     </style>
 
     <style name="career_reward_txt3">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray1</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
@@ -567,7 +567,7 @@
     <!--</style>-->
 
     <style name="secretary_tips_txt2">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray1</item>
         <item name="android:textSize">@dimen/text_size_small_s1</item>
@@ -578,7 +578,7 @@
     </style>
 
     <style name="secretary_tips_txt3">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray1</item>
         <item name="android:textSize">@dimen/text_size_small_s3</item>
@@ -591,7 +591,7 @@
     </style>
 
     <style name="car_tire_prssure_txt1">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/text_size_middle</item>
@@ -600,7 +600,7 @@
     </style>
 
     <style name="car_tire_prssure_txt2">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">10sp</item>
@@ -611,7 +611,7 @@
     <!-- 座驾-违章查询 -->
 
     <style name="car_illeage_linear1">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
         <item name="android:gravity">center_vertical</item>
@@ -631,7 +631,7 @@
     </style>
 
     <style name="car_illeage_edit">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray2</item>
         <item name="android:textSize">@dimen/text_size_small</item>
@@ -643,13 +643,13 @@
     <!-- 车圈 -->
     <!-- 车圈-主页面item -->
     <style name="friends_main_item_layout1">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:visibility">gone</item>
     </style>
 
     <style name="friends_main_item_txt">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/text_color_gray2</item>
         <item name="android:textSize">@dimen/text_size_small</item>
@@ -658,7 +658,7 @@
 
     <!-- 车圈-邀请好友 -->
     <style name="friends_invite_layout1">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">46.5dip</item>
         <item name="android:paddingLeft">@dimen/friends_invite_padding_h</item>
         <item name="android:paddingRight">@dimen/friends_invite_padding_h</item>
@@ -669,7 +669,7 @@
 
     <!-- 用户中心(其它杂项) -->
     <style name="usercenter_edit1">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/main_page_linear_border</item>
         <item name="android:textSize">14sp</item>
