--- a/app/src/main/res/layout/activity_car_state_now.xml
+++ b/app/src/main/res/layout/activity_car_state_now.xml
@@ -5,7 +5,9 @@
               android:background="@color/layout_background"
               android:orientation="vertical">
 
-    <include layout="@layout/head_sub_normal"/>
+    <include
+        layout="@layout/head_sub_normal"
+        android:visibility="gone"/>
 
     <com.carlt.doride.ui.pull.PullToRefreshListView
         android:id="@+id/activity_car_condition_list"
