--- a/app/src/main/res/layout/activity_searchaddr.xml
+++ b/app/src/main/res/layout/activity_searchaddr.xml
@@ -120,18 +120,13 @@
                 android:textColor="#fff"
                 android:textSize="14sp"/>
         </LinearLayout>
+        <include
+            layout="@layout/layout_no_network"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            />
 
-        <TextView
-            android:id="@+id/search_error_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="20dip"
-            android:layout_marginRight="20dip"
-            android:layout_marginTop="10dip"
-            android:textColor="#fff"
-            android:textSize="14sp"
-            android:visibility="gone"/>
 
         <ListView
             android:id="@+id/searchaddr_list"
