--- a/app/src/main/res/layout/layout_no_network.xml
+++ b/app/src/main/res/layout/layout_no_network.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/error_lay_main"
+    android:id="@+id/no_network_lay_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,7 +14,7 @@
         android:layout_above="@+id/error_txt_des_sub"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="8dp"
-        android:src="@mipmap/icon_error_bg"/>
+        android:src="@mipmap/icon_error"/>
 
     <Button
         android:id="@+id/error_txt_retry"
