--- a/app/src/main/res/layout/activity_report_month.xml
+++ b/app/src/main/res/layout/activity_report_month.xml
@@ -331,7 +331,7 @@
                 android:id="@+id/report_month_fuel_txt1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="每月耗油"
+                android:text="每月油耗"
                 android:textColor="@color/text_color_gray3"
                 android:textSize="16sp" />
 
