--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginTop="12dp"
-        android:text="正在加载"
+        android:text="正在加载..."
         android:layout_below="@+id/loading_bar_loading"
         android:textColor="@color/text_color_gray3"
         android:textSize="14sp"/>
