--- a/app/src/main/res/layout/layout_secretary_report_table.xml
+++ b/app/src/main/res/layout/layout_secretary_report_table.xml
@@ -37,14 +37,14 @@
     <TextView
         android:id="@+id/layout_secretary_report_table_txt2"
         style="@style/secretary_report_txt2"
-        android:layout_below="@id/text_title1"
+        android:layout_below="@id/line1"
         android:layout_centerHorizontal="true"
         android:text="升" />
 
     <TextView
         android:id="@+id/layout_secretary_report_table_txt1"
         style="@style/secretary_report_txt4"
-        android:layout_below="@id/text_title1"
+        android:layout_below="@id/line1"
         android:layout_toLeftOf="@id/layout_secretary_report_table_txt2"
         android:text="公里" />
 
