--- a/app/src/main/res/layout/layout_title_remote.xml
+++ b/app/src/main/res/layout/layout_title_remote.xml
@@ -24,7 +24,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_gravity="center_horizontal"
-        android:src="@mipmap/title_image"
+        android:src="@mipmap/iv_top_logo"
         />
 
     <TextView
