修改进入行车日志或者用车提醒等，看到具体消息，然后返回到首页crash，6951

--- a/app/src/main/res/layout/activity_remote_main.xml
+++ b/app/src/main/res/layout/activity_remote_main.xml
@@ -146,5 +146,12 @@
             android:layout_marginBottom="3dip"
             android:src="@drawable/arrow_up_bg"
             />
+        <View
+            android:layout_below="@+id/remote_main_img_arrow"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/text_color_gray4"
+            android:layout_marginBottom="1dp"
+            />
     </RelativeLayout>
 </RelativeLayout>
