--- a/app/src/main/res/layout/activity_about_yema.xml
+++ b/app/src/main/res/layout/activity_about_yema.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@color/main_color"
     android:gravity="center_horizontal"
-    tools:context="com.carlt.doride.ui.activity.setting.AboutYemaActivity">
+    tools:context="com.carlt.doride.ui.activity.setting.AboutDorideActivity">
 
     <ImageView
         android:layout_width="108dp"
