--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -25,66 +25,73 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
+             <RelativeLayout
+                 android:layout_width="match_parent"
+                 android:layout_height="175dp">
+                  <ImageView
+                      android:id="@+id/ivHomeBg"
+                      android:layout_width="match_parent"
+                      android:src="@drawable/home_bg"
+                      android:scaleType="fitXY"
+                      android:layout_height="match_parent"/>
+                 <LinearLayout
+                     android:id="@+id/ll_homepage"
+                     android:layout_width="match_parent"
+                     android:layout_height="175dp"
+                     android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/ll_homepage"
-                android:layout_width="match_parent"
-                android:layout_height="175dp"
-                android:layout_below="@+id/fl_title"
-                android:background="@drawable/home_bg"
-                android:orientation="vertical">
+                     <TextView
+                         android:id="@+id/home_txt_date"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginLeft="12dp"
+                         android:layout_marginTop="22dp"
+                         android:includeFontPadding="false"
+                         android:text="--"
+                         android:textColor="@color/text_color_gray3"
+                         android:textSize="24sp" />
 
-                <TextView
-                    android:id="@+id/home_txt_date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="22dp"
-                    android:includeFontPadding="false"
-                    android:text="--"
-                    android:textColor="@color/text_color_gray3"
-                    android:textSize="24sp" />
+                     <TextView
+                         android:id="@+id/home_txt_city"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginLeft="12dp"
+                         android:drawableLeft="@drawable/home_location_icon"
+                         android:drawablePadding="10dp"
+                         android:text="--"
+                         android:textColor="@color/black"
+                         android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/home_txt_city"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:drawableLeft="@drawable/home_location_icon"
-                    android:drawablePadding="10dp"
-                    android:text="--"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                     <TextView
+                         android:id="@+id/home_txt_weather"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginLeft="12dp"
+                         android:text="--"
+                         android:textColor="@color/black"
+                         android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/home_txt_weather"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:text="--"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                     <TextView
+                         android:id="@+id/home_txt_temputre"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginLeft="12dp"
+                         android:text="--"
+                         android:textColor="@color/black"
+                         android:textSize="18sp" />
 
-                <TextView
-                    android:id="@+id/home_txt_temputre"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:text="--"
-                    android:textColor="@color/black"
-                    android:textSize="18sp" />
+                     <ImageView
+                         android:id="@+id/activity_home_iv_report"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:layout_marginLeft="12dp"
+                         android:layout_marginTop="5dp"
+                         android:src="@drawable/home_report_icon_bg" />
+                 </LinearLayout>
 
-                <ImageView
-                    android:id="@+id/activity_home_iv_report"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="12dp"
-                    android:layout_marginTop="5dp"
-                    android:src="@drawable/home_report_icon_bg" />
-            </LinearLayout>
+             </RelativeLayout>
 
             <include
                 layout="@layout/layout_report_grid"
