1，修改车型弹窗屏幕适配

--- a/app/src/main/res/layout/dialog_notitle.xml
+++ b/app/src/main/res/layout/dialog_notitle.xml
@@ -10,7 +10,7 @@
     <RelativeLayout
         android:id="@+id/dialog_notitle_lay_content"
         android:layout_width="match_parent"
-        android:layout_height="90dp"
+        android:layout_height="100dp"
         >
 
         <TextView
@@ -33,6 +33,7 @@
             android:layout_marginBottom="15dip"
             android:layout_marginLeft="20dip"
             android:layout_marginTop="15dp"
+            android:maxLines="2"
             android:gravity="center_horizontal"
             android:text="内容2"
             android:textColor="#666666"
