--- a/app/src/main/res/values-xhdpi/styles.xml
+++ b/app/src/main/res/values-xhdpi/styles.xml
@@ -989,4 +989,14 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:gravity">center_vertical</item>
     </style>
+
+    <!-- 公用底部长按钮样式 -->
+    <style name="public_bottom_btn_blue">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">48dip</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/text_size_middle1</item>
+        <item name="android:background">@drawable/bottom_btn_blue</item>
+        <item name="android:gravity">center</item>
+    </style>
 </resources>
